# minecraft-controller

./: .gitignore  WORKLOG.md  manage.py  pyproject.toml  requirements.txt
controller/: urls.py  views.py
controller/templates/: base.html  dashboard.html  login_page.html  public_dashboard.html  starting_server.html  status_dependent_management.html  stopping_server.html
minecraft_control/: asgi.py  settings.py  urls.py  wsgi.py
